Fixed: links align

--- a/style.css
+++ b/style.css
@@ -782,9 +782,6 @@ iframe#launcher {
     font-weight:800;
     text-align:center;
 }
-.home-page .container_featured_articles .featured_articles{
-    text-align: center;
-}
 .home-page .container_featured_articles .featured_articles a{
     font-size: 14px;
     line-height: 20px;
